--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
-  "name": "WhatsApp",
-  "description": "Enjoy your WhatsApp exprience as a Chrome App",
-  "version": "0.2.0",
+  "name": "WhatsApp for Chrome",
+  "short_name": "WhatsApp",
+  "description": "Enjoy your WhatsApp for Web experience as a Chrome App",
+  "version": "0.2.1",
   "manifest_version": 2,
   "app": {
     "background": {
@@ -14,7 +15,9 @@
     "notifications",
     "videoCapture",
     "audioCapture",
-    "fileSystem"
+    "fileSystem",
+    "https://www.google-analytics.com/",
+    "storage"
   ],
   "webview": {
     "partitions": [
