--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
     "audioCapture",
     "fileSystem",
     "https://www.google-analytics.com/",
-    "storage"
+    "storage",
+    "alarms"
   ],
   "webview": {
     "partitions": [
