Adds a copy link menu item to the app

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
     "audioCapture",
     "fileSystem",
     "storage",
-    "alarms"
+    "alarms",
+    "clipboardWrite"
   ],
   "webview": {
     "partitions": [
