--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "WhatsChrome",
   "short_name": "WhatsChrome",
-  "description": "Unofficial WhatsApp for Chrome",
+  "description": "__MSG_appDesc__",
   "version": "0.5.6",
   "manifest_version": 2,
   "app": {
@@ -10,6 +10,7 @@
     }
   },
   "icons": { "128": "img/icon.png" },
+  "default_locale": "en",
   "permissions": [
     "webview",
     "notifications",
